@@ -1,9 +1,11 @@
 package it.pagopa.pn.paperchannel.service.impl;
 
+import it.pagopa.pn.commons.log.PnAuditLogBuilder;
 import it.pagopa.pn.paperchannel.exception.PnGenericException;
 import it.pagopa.pn.paperchannel.exception.PnPaperEventException;
 import it.pagopa.pn.paperchannel.mapper.*;
 import it.pagopa.pn.paperchannel.middleware.db.dao.AddressDAO;
+import it.pagopa.pn.paperchannel.middleware.db.dao.CostDAO;
 import it.pagopa.pn.paperchannel.middleware.db.dao.RequestDeliveryDAO;
 import it.pagopa.pn.paperchannel.middleware.db.entities.PnAddress;
 import it.pagopa.pn.paperchannel.middleware.db.entities.PnDeliveryRequest;
@@ -21,37 +23,35 @@ import it.pagopa.pn.paperchannel.validator.PrepareRequestValidator;
 import it.pagopa.pn.paperchannel.validator.SendRequestValidator;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
+import org.slf4j.MDC;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
-import reactor.core.scheduler.Schedulers;
-import reactor.util.function.Tuples;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
-import static it.pagopa.pn.paperchannel.exception.ExceptionTypeEnum.DELIVERY_REQUEST_NOT_EXIST;
+import static it.pagopa.pn.commons.log.MDCWebFilter.MDC_TRACE_ID_KEY;
 import static it.pagopa.pn.paperchannel.exception.ExceptionTypeEnum.DELIVERY_REQUEST_IN_PROCESSING;
+import static it.pagopa.pn.paperchannel.exception.ExceptionTypeEnum.DELIVERY_REQUEST_NOT_EXIST;
 
 @Slf4j
 @Service
 public class PaperMessagesServiceImpl extends BaseService implements PaperMessagesService {
 
     @Autowired
-    private RequestDeliveryDAO requestDeliveryDAO;
-    @Autowired
     private AddressDAO addressDAO;
-    @Autowired
-    private NationalRegistryClient nationalRegistryClient;
+
     @Autowired
     private ExternalChannelClient externalChannelClient;
-    @Autowired
-    private PrepareAsyncServiceImpl prepareAsyncService;
-    @Autowired
-    private SqsSender sqsSender;
 
+    public PaperMessagesServiceImpl(PnAuditLogBuilder auditLogBuilder, NationalRegistryClient nationalRegistryClient,
+                                    RequestDeliveryDAO requestDeliveryDAO, SqsSender sqsSender, CostDAO costDAO) {
+
+        super(auditLogBuilder, requestDeliveryDAO, costDAO, nationalRegistryClient, sqsSender);
+    }
 
     @Override
     public Mono<PrepareEvent> retrievePaperPrepareRequest(String requestId) {
@@ -73,8 +73,6 @@ public class PaperMessagesServiceImpl extends BaseService implements PaperMessag
                 .zipWhen(entity -> {
                     SendRequestValidator.compareRequestEntity(sendRequest,entity);
 
-                    //TODO Managed error from status code into pnDeliveryRequest
-                    //verifico se la fase di prepare è stata completata
                     if (StringUtils.equals(entity.getStatusCode(), StatusDeliveryEnum.IN_PROCESSING.getCode())) {
                         return Mono.error(new PnGenericException(DELIVERY_REQUEST_IN_PROCESSING, DELIVERY_REQUEST_IN_PROCESSING.getMessage(), HttpStatus.CONFLICT));
                     }
@@ -86,73 +84,86 @@ public class PaperMessagesServiceImpl extends BaseService implements PaperMessag
                         entity.setStatusDate(DateUtils.formatDate(new Date()));
                     }
 
-                    List<AttachmentInfo> attachments = entity.getAttachments().stream().map(AttachmentMapper::fromEntity).collect(Collectors.toList());
+                    List<AttachmentInfo> attachments = entity.getAttachments().stream().map(AttachmentMapper::fromEntity).toList();
                     Address address = AddressMapper.fromAnalogToAddress(sendRequest.getReceiverAddress());
                     return super.calculator(attachments, address, sendRequest.getProductType()).map(value -> value);
                 })
                 .switchIfEmpty(Mono.error(new PnGenericException(DELIVERY_REQUEST_NOT_EXIST, DELIVERY_REQUEST_NOT_EXIST.getMessage(), HttpStatus.NOT_FOUND)))
-                .zipWhen(entityAndAmount ->
-
-                        //TODO chiamare external channel solo se status == TAKING_CHARGE
-                        this.externalChannelClient.sendEngageRequest(sendRequest).then(this.requestDeliveryDAO.updateData(entityAndAmount.getT1()).map(item -> item)), (entityAndAmount, none) -> entityAndAmount.getT2()
-                )
+                .zipWhen(entityAndAmount ->{
+                    pnLogAudit.addsBeforeSend(sendRequest.getIun(), String.format("prepare requestId = %s, trace_id = %s  request to External Channel", requestId, MDC.get(MDC_TRACE_ID_KEY)));
+                    return this.externalChannelClient.sendEngageRequest(sendRequest)
+                                    .then(Mono.defer(() -> {
+                                        pnLogAudit.addsSuccessSend(sendRequest.getIun(), String.format("prepare requestId = %s, trace_id = %s  request to External Channel", requestId, MDC.get(MDC_TRACE_ID_KEY)));
+                                        return this.requestDeliveryDAO.updateData(entityAndAmount.getT1()).map(item -> item);
+                                    }))
+                                    .onErrorResume(ex -> {
+                                        pnLogAudit.addsFailSend(sendRequest.getIun(), String.format("prepare requestId = %s, trace_id = %s  request to External Channel", requestId, MDC.get(MDC_TRACE_ID_KEY)));
+                                        return Mono.error(ex);
+                                    });
+                }, (entityAndAmount, none) -> entityAndAmount.getT2())
                 .map(amount -> {
                     log.info("Amount: {} for requestId {}", amount, requestId);
                     SendResponse sendResponse = new SendResponse();
-                    sendResponse.setAmount(amount.intValue());
+                    sendResponse.setAmount(amount.intValue()*100);
                     return sendResponse;
                 });
     }
 
     @Override
     public Mono<PaperChannelUpdate> preparePaperSync(String requestId, PrepareRequest prepareRequest){
-        log.info("Start preparePaperSync with requestId {}", requestId);
         prepareRequest.setRequestId(requestId);
 
         if (StringUtils.isEmpty(prepareRequest.getRelatedRequestId())){
-            log.debug("First attempt");
+            log.info("First attempt requestId {}", requestId);
             //case of 204
             return this.requestDeliveryDAO.getByRequestId(prepareRequest.getRequestId())
                     .flatMap(entity -> {
-                        PrepareRequestValidator.compareRequestEntity(prepareRequest, entity);
+                        PrepareRequestValidator.compareRequestEntity(prepareRequest, entity, true);
                         return addressDAO.findByRequestId(requestId)
                                 .map(address-> PreparePaperResponseMapper.fromResult(entity,address))
                                 .switchIfEmpty(Mono.just(PreparePaperResponseMapper.fromResult(entity,null)));
                     })
-                    .switchIfEmpty(Mono.defer(() -> saveRequestAndAddress(prepareRequest, null)
+                    .switchIfEmpty(Mono.defer(() -> saveRequestAndAddress(prepareRequest, prepareRequest.getReceiverAddress())
                             .flatMap(response -> {
-                                PrepareAsyncRequest request = new PrepareAsyncRequest(requestId, null, null);
+                                PrepareAsyncRequest request = new PrepareAsyncRequest(requestId, response.getIun(), null, null, false, 0);
                                 this.sqsSender.pushToInternalQueue(request);
                                 throw new PnPaperEventException(PreparePaperResponseMapper.fromEvent(prepareRequest.getRequestId()));
                             }))
                     );
-
         }
 
-        log.debug("Second attemp");
+        log.info("Second attempt requestId {}", requestId);
         return this.requestDeliveryDAO.getByRequestId(prepareRequest.getRelatedRequestId())
                 .flatMap(oldEntity -> {
                     prepareRequest.setRequestId(oldEntity.getRequestId());
-                    PrepareRequestValidator.compareRequestEntity(prepareRequest, oldEntity);
+                    PrepareRequestValidator.compareRequestEntity(prepareRequest, oldEntity, false);
                     prepareRequest.setRequestId(requestId);
                     return this.requestDeliveryDAO.getByRequestId(prepareRequest.getRequestId())
                             .flatMap(newEntity -> {
                                 if (newEntity == null) {
-                                    log.debug("New attempt");
+                                    log.info("New attempt");
                                     return Mono.empty();
                                 }
-                                log.debug("Attempt already exist");
-                                PrepareRequestValidator.compareRequestEntity(prepareRequest, newEntity);
+                                log.info("Attempt already exist");
+                                PrepareRequestValidator.compareRequestEntity(prepareRequest, newEntity, false);
                                 return addressDAO.findByRequestId(requestId)
                                         .map(address-> PreparePaperResponseMapper.fromResult(newEntity,address))
                                         .switchIfEmpty(Mono.just(PreparePaperResponseMapper.fromResult(newEntity,null)));
                             })
-                            .switchIfEmpty(Mono.defer(()-> finderAddressAndSave(prepareRequest)
+                            .switchIfEmpty(Mono.defer(()-> saveRequestAndAddress(prepareRequest, prepareRequest.getDiscoveredAddress())
                                     .flatMap(response -> {
-                                        throw new PnPaperEventException(PreparePaperResponseMapper.fromEvent(prepareRequest.getRequestId()));
-                                    }))
-                            );
 
+                                        log.info("Start call national");
+                                        this.finderAddressFromNationalRegistries(
+                                                (MDC.get(MDC_TRACE_ID_KEY) == null ? UUID.randomUUID().toString() : MDC.get(MDC_TRACE_ID_KEY)),
+                                                response.getRequestId(),
+                                                response.getRelatedRequestId(),
+                                                response.getFiscalCode(),
+                                                response.getReceiverType(),
+                                                response.getIun(), 0);
+                                        throw new PnPaperEventException(PreparePaperResponseMapper.fromEvent(prepareRequest.getRequestId()));
+                                    })
+                            ));
                 })
                 .switchIfEmpty(Mono.error(new PnGenericException(DELIVERY_REQUEST_NOT_EXIST, DELIVERY_REQUEST_NOT_EXIST.getMessage(), HttpStatus.NOT_FOUND)));
     }
@@ -162,9 +173,11 @@ public class PaperMessagesServiceImpl extends BaseService implements PaperMessag
         return requestDeliveryDAO.getByRequestId(requestId)
                 .zipWhen(entity -> {
 
-                    //TODO Added other status code
-                    if (entity.getStatusCode().equals(StatusDeliveryEnum.TAKING_CHARGE.getCode()) ||
-                        entity.getStatusCode().equals(StatusDeliveryEnum.IN_PROCESSING.getCode())) {
+
+                    if (entity.getStatusCode().equals(StatusDeliveryEnum.TAKING_CHARGE.getCode())
+                            || entity.getStatusCode().equals(StatusDeliveryEnum.IN_PROCESSING.getCode())
+                            || entity.getStatusCode().equals(StatusDeliveryEnum.PAPER_CHANNEL_DEFAULT_ERROR.getCode())
+                            || entity.getStatusCode().equals(StatusDeliveryEnum.PAPER_CHANNEL_NEW_REQUEST.getCode())) {
                         return Mono.error(new PnGenericException(DELIVERY_REQUEST_NOT_EXIST, DELIVERY_REQUEST_NOT_EXIST.getMessage(), HttpStatus.NOT_FOUND));
                     }
 
@@ -175,25 +188,20 @@ public class PaperMessagesServiceImpl extends BaseService implements PaperMessag
                 .switchIfEmpty(Mono.error(new PnGenericException(DELIVERY_REQUEST_NOT_EXIST, DELIVERY_REQUEST_NOT_EXIST.getMessage(), HttpStatus.NOT_FOUND)));
     }
 
-    private Mono<PnDeliveryRequest> finderAddressAndSave(PrepareRequest prepareRequest){
-        return this.nationalRegistryClient.finderAddress(prepareRequest.getReceiverFiscalCode(), prepareRequest.getReceiverType())
-                .flatMap(response -> {
-                    log.debug("Response from national registry {}", response.getCorrelationId());
-                    return saveRequestAndAddress(prepareRequest, response.getCorrelationId())
-                            .map(savedEntity -> savedEntity);
-                });
+    @Override
+    public void finderAddress(String correlationId, String requestId, String relatedRequestId, String fiscalCode, String receiverType, String iun, Integer attempt) {
+        this.finderAddressFromNationalRegistries(correlationId, requestId, relatedRequestId, fiscalCode, receiverType, iun, attempt);
     }
 
-
-    private Mono<PnDeliveryRequest> saveRequestAndAddress(PrepareRequest prepareRequest, String correlationId){
-        PnDeliveryRequest pnDeliveryRequest = RequestDeliveryMapper.toEntity(prepareRequest, correlationId);
-        Address address = AddressMapper.fromAnalogToAddress(prepareRequest.getReceiverAddress());
-        pnDeliveryRequest.setAddressHash(address.convertToHash());
-
+    private Mono<PnDeliveryRequest> saveRequestAndAddress(PrepareRequest prepareRequest, AnalogAddress address){
+        PnDeliveryRequest pnDeliveryRequest = RequestDeliveryMapper.toEntity(prepareRequest);
         PnAddress addressEntity = null;
-        if (correlationId == null){
-            addressEntity = AddressMapper.toEntity(address, prepareRequest.getRequestId());
-        }
+
+       if (address != null) {
+           Address mapped = AddressMapper.fromAnalogToAddress(address);
+           pnDeliveryRequest.setAddressHash(mapped.convertToHash());
+           addressEntity = AddressMapper.toEntity(mapped, prepareRequest.getRequestId());
+       }
 
         return requestDeliveryDAO.createWithAddress(pnDeliveryRequest, addressEntity);
     }
